fix paranthesis typo

--- a/prologin/pages/templates/pages/about-privacy-policy.html
+++ b/prologin/pages/templates/pages/about-privacy-policy.html
@@ -103,7 +103,7 @@ Taking into account their respective needs, the following are a recipient of all
 
 *   authorized members of Prologin;
 *   authorized members of Prologin partners and/or sub-contractors;
-*   emergency services if needed.)
+*   emergency services if needed.
 
 #### Data Transfers Outside of EU
 
