--- a/prologin/pages/templates/pages/about-contest-rules.html
+++ b/prologin/pages/templates/pages/about-contest-rules.html
@@ -39,7 +39,7 @@
 
     <h3>Article 3</h3>
     <p>Chaque participant doit avoir 20 ans ou moins au 31 décembre de l’année
-    précédant l’édition (édition 2016 : né après le 1er janvier 1995), être
+    précédant l’édition (édition {{ edition }} : né après le 1er janvier {{ born_year }}), être
     francophone, résider dans un pays de l'Union Européenne ou en Suisse et ne
     pas être ou avoir été élève des écoles EPITA/EPITECH à Paris.</p>
 
