Add LinkedIn icon on homepage (resolve #293)

--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -48,6 +48,12 @@
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
       </span>
     </a>
+    <a href="https://www.linkedin.com/company/prologin/" title="{% trans "Prologin on LinkedIn" %}" class="social">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
+        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
   </div>
   <div class="col-md-4">
     <h3>{% trans "Change locale" %} <i class=" fa fa-globe"></i></h3>
