Update about/privacy (RGPD)

--- a/prologin/pages/templates/pages/about-privacy-policy.html
+++ b/prologin/pages/templates/pages/about-privacy-policy.html
@@ -107,7 +107,7 @@ Taking into account their respective needs, the following are a recipient of all
 
 #### Data Transfers Outside of EU
 
-Data transfers outside the European Union may take place (partner in Switzerland for the organization of a regional event). This is only applicable for Prologin candidates participating in regional events in Switzerland.
+Des transferts de données en dehors de l'Union Européenne peuvent avoir lieu (vers un partenaire en Suisse pour l'organisation de l'épreuve régionale correspondante le cas échéant, et vers Google dans le monde entier). Google et Prologin se reposent sur les clauses contractuelles type prévues par la Commission Européenne et disponibles sur son site internet.
         {% endblocktrans %}
         {{ data_recipients|flavored_markdown:0 }}
     </div>
