Fix qcm answer on open ended question (#324)

--- a/prologin/contest/templates/correction/contestant-qualification.html
+++ b/prologin/contest/templates/correction/contestant-qualification.html
@@ -34,14 +34,19 @@
               {% for proposition in field %}
                 <li class="
                     {% with answer=field.field.answer %}
-                      {% if answer.is_correct and '<p>'|add:answer.proposition.text|add:'</p>' == proposition.data.label %}
-                        correct
-                      {% elif proposition.data.selected %}
-                        incorrect
+                      {% if not question.is_open_ended %}
+                        {% if answer.is_correct and '<p>'|add:answer.proposition.text|add:'</p>' == proposition.data.label %}
+                          correct
+                        {% elif proposition.data.selected %}
+                          incorrect
+                        {% endif %}
                       {% endif %}
                     {% endwith %}
-                  ">
+                ">
                   {{ proposition }}
+                  {% if question.is_open_ended %}
+                    <p>{% trans "Correct answer:" %} <code class="text-success">{{ question.correct_answer.text }}</code></p>
+                  {% endif %}
                 </li>
               {% endfor %}
             </ul>
