--- a/prologin/forum/templates/forum/forum_threads.html
+++ b/prologin/forum/templates/forum/forum_threads.html
@@ -10,6 +10,7 @@
 
 {% block title %}{{ forum.name }}{% endblock %}
 
+
 {% block content %}
 
   {% has_perm 'forum.create_thread' request.user forum as can_create_thread %}
@@ -21,8 +22,16 @@
   <h1>{{ forum.name }}</h1>
   <div class="text-muted forum-description">{{ forum.description|markdown }}</div>
 
+
+  <form class="form-inline form-user-search">
+    <i class="fa fa-fw fa-search"></i>
+    <input type="hidden" id="search-user-id" name="user">
+    <input id="search-thread-name" name="username" type="text" autocomplete="off" class="form-control" placeholder="{% trans "Search thread" %}">
+  </form>
+
+
   {% if sticky_threads %}
-    <ul class="forum-listing forum-sticky-threads">
+    <ul class="forum-listing forum-sticky-threads" id="sticky_threads">
       {% for thread in sticky_threads %}
         {% include "forum/stub_forum_thread.html" %}
       {% endfor %}
@@ -32,7 +41,7 @@
   {% include "stub_pagination.html" %}
 
   {% if normal_threads %}
-    <ul class="forum-listing">
+    <ul class="forum-listing" id="normal_threads">
       {% for thread in normal_threads %}
         {% include "forum/stub_forum_thread.html" %}
       {% endfor %}
