--- a/prologin/forum/templates/forum/base.html
+++ b/prologin/forum/templates/forum/base.html
@@ -21,6 +21,7 @@
       return document.location.toString()
         .replace("http://", "")
         .replace("https://", "")
+        .split("?")[0]
         .split("/")
     }
     function urlWithoutHost() {
@@ -28,8 +29,14 @@
       url.splice(0, 1)
       return url.join("/")
     }
-    const SEARCH_THREAD_URL = urlWithoutHost().replace("forum/","/forum/search/")
+    const SEARCH_THREAD_URL = urlWithoutHost().replace("forum/","/forum/search/").replace("search/search/","search/")
     const SEARCH_THREAD_EMPTY = "{% trans "No user matching query"|escapejs %}"
+    {% if query %}
+      {% if queryrendertype %}
+        let thread = document.getElementById("search-thread-name");
+        thread.value = "{{ query }}"
+      {% endif %}
+    {% endif %}
 
     $(function() {
       window.emojiPicker = new EmojiPicker({
