--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -23,6 +23,19 @@
 {% block content %}
 
   <h1>{{ thread.title }}</h1>
+  {% if request.user.is_authenticated %}
+  <form style="display: inline-block" action="{% url 'forum:toggle-subscribe-post' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline">
+    {% csrf_token %}
+    
+    {% if subscribed %}
+      <button type="submit" class="btn btn-default">
+        <i class="fa fa-random"></i> {% trans "Unsubscribe to this thread" %}</button>
+    {% else %}
+      <button type="submit" class="btn btn-success">
+        <i class="fa fa-random"></i> {% trans "Subscribe to this thread" %}</button>
+    {% endif %}
+  </form>
+  {% endif %}
   {% has_perm 'forum.move_thread' request.user thread as user_can_move_thread %}
   {% if user_can_move_thread %}
     <form style="display: inline-block" action="{% url 'forum:move-thread' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline">
