--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -8,7 +8,11 @@
   <li class="{% active '^/about/' %}"><a href="{% url 'pages:about-contest' %}">{% trans "Discover" %}</a></li>
   <li class="{% active '^/train/' %}"><a href="{% url 'problems:index' %}">{% trans "Train" %}</a></li>
   <li class="{% active '^/archives/' %}"><a href="{% url 'archives:index' %}">{% trans "Archives" %}</a></li>
-  <li class="{% active '^/forum/' %}"><a href="{% url 'forum:index' %}">{% trans "Forums" %}</a></li>
+  <li class="{% active '^/forum/(?!notification)' %}"><a href="{% url 'forum:index' %}">{% trans "Forums" %}</a></li>
+  {% if request.user.is_authenticated %}
+  <li class="{% active '^/forum/notifications' %}"><a href="{% url 'forum:notifications' %}">{% trans "Notifications" %}</a></li>
+  {% endif %}
+
 {% if request.user.is_staff %}
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-star"></i> {% trans "Admin" %} <span class="caret"></span></a>
