--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -24,7 +24,7 @@
 
   <h1>{{ thread.title }}</h1>
   {% if request.user.is_authenticated %}
-  <form style="display: inline-block" action="{% url 'forum:toggle-subscribe-post' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline">
+  <form action="{% url 'forum:toggle-subscribe-post' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline thread-button-inline">
     {% csrf_token %}
     
     {% if subscribed %}
@@ -38,7 +38,7 @@
   {% endif %}
   {% has_perm 'forum.move_thread' request.user thread as user_can_move_thread %}
   {% if user_can_move_thread %}
-    <form style="display: inline-block" action="{% url 'forum:move-thread' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline">
+    <form action="{% url 'forum:move-thread' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline thread-button-inline">
       {% csrf_token %}
       <button type="submit" class="btn btn-default">
         <i class="fa fa-random"></i>
@@ -49,7 +49,7 @@
   {% endif %}
   {% has_perm 'forum.edit_thread_pin' request.user thread as user_can_pin_thread %}
   {% if user_can_pin_thread %}
-    <form style="display: inline-block" action="{% url 'forum:edit-thread-pin' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline">
+    <form action="{% url 'forum:edit-thread-pin' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline thread-button-inline">
       {% csrf_token %}
       {{ edit_thread_pin_form.type }}
       <button type="submit" class="btn btn-default">
@@ -61,7 +61,7 @@
   {% endif %}
   {% has_perm 'forum.edit_thread_lock' request.user thread as user_can_lock_thread %}
   {% if user_can_lock_thread %}
-    <form style="display: inline-block" action="{% url 'forum:edit-thread-lock' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline">
+    <form action="{% url 'forum:edit-thread-lock' thread.forum.slug thread.forum.pk thread.slug thread.pk %}" method="post" class="form form-inline thread-button-inline">
       {% csrf_token %}
       {{ edit_thread_lock_form.status }}
       <button type="submit" class="btn btn-warning">
