pages: metalang is dead, long live iorgen

--- a/prologin/pages/templates/pages/about-contribute.html
+++ b/prologin/pages/templates/pages/about-contribute.html
@@ -51,8 +51,8 @@ secure online judge.</li>
 AI match maker for the finals.</li>
 <li><a href="https://github.com/prologin/sadm">sadm</a>:
 finals technical infrastructure.</li>
-<li><a href="https://github.com/prologin/metalang">metalang</a>:
-generate code stubs.</li>
+<li><a href="https://github.com/prologin/iorgen">iorgen</a>:
+generate code stubs and problem statements.</li>
 </ul>
 As an example, Haskell and Rust programming languages have been added by Prologin finalists so they could use it during the
 finals!{% endblocktrans %}</p>
