pages: mention site in contributing page

--- a/prologin/pages/templates/pages/about-contribute.html
+++ b/prologin/pages/templates/pages/about-contribute.html
@@ -53,6 +53,8 @@ AI match maker for the finals.</li>
 finals technical infrastructure.</li>
 <li><a href="https://github.com/prologin/iorgen">iorgen</a>:
 generate code stubs and problem statements.</li>
+<li><a href="https://github.com/prologin/site">site</a>:
+this website.</li>
 </ul>
 As an example, Haskell and Rust programming languages have been added by Prologin finalists so they could use it during the
 finals!{% endblocktrans %}</p>
