add: countdown until the 2021 qualifications

--- a/prologin/homepage/templates/homepage/jumbotron.html
+++ b/prologin/homepage/templates/homepage/jumbotron.html
@@ -6,6 +6,8 @@
     <h1>{% trans "Prologin, the French National Computer Science Contest" %}</h1>
     <p>{% blocktrans with born_year as born_year %}Born in {{ born_year }} or after? Join the Prologin contest! Registration is free.{% endblocktrans %}</p>
 
+    {% include "homepage/countdown.html" %}
+
     {% trans "Unknown date" as no_such_date %}
     {# timeline #}
     <div class="htl">
