--- a/prologin/pages/templates/pages/about-privacy-policy.html
+++ b/prologin/pages/templates/pages/about-privacy-policy.html
@@ -14,7 +14,7 @@
 
 <h1>{% trans "Privacy policy" %}</h1>
 <section class="privacy">
-    <h2>{% trans "Prologin and your Personal Data" %}</h2> 
+    <h2>{% trans "Prologin and your Personal Data" %}</h2>
     <button class="btn btn-default btn-block" type="button" data-toggle="collapse" data-target="#processing" aria-expanded="false" aria-controls="processing">
         <h3>{% trans "About the Processing" %}</h3>
     </button>
@@ -22,7 +22,7 @@
         {% blocktrans asvar about_processing %}
 #### Purposes
 
-The processing goal is to **organize the Prologin contest**.  
+The processing goal is to **organize the Prologin contest**.
 It enables the Prologin association to:
 
 *   process registration requests on the Prologin website;
@@ -107,7 +107,7 @@ Taking into account their respective needs, the following are a recipient of all
 
 #### Data Transfers Outside of EU
 
-Des transferts de données en dehors de l'Union Européenne peuvent avoir lieu (vers un partenaire en Suisse pour l'organisation de l'épreuve régionale correspondante le cas échéant, et vers Google dans le monde entier). Google et Prologin se reposent sur les clauses contractuelles type prévues par la Commission Européenne et disponibles sur son site internet.
+Data may be transferred outside the European Union (to a partner in Switzerland for the organization of the respective regional event, if applicable, and to Google worldwide). Google and Prologin rely on the standard contractual clauses provided by the European Commission and available on its website.
         {% endblocktrans %}
         {{ data_recipients|flavored_markdown:0 }}
     </div>
@@ -117,7 +117,7 @@ Des transferts de données en dehors de l'Union Européenne peuvent avoir lieu (
     </button>
     <div class="collapse" id="storage_period">
         {% blocktrans asvar storage_period %}
-Identification data, school, and personal life are stored until the data subject unsubscribes from Prologin.  
+Identification data, school, and personal life are stored until the data subject unsubscribes from Prologin.
 Health data are deleted three years after the end of the final.
         {% endblocktrans %}
         {{ storage_period|flavored_markdown:0 }}
