--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -54,6 +54,12 @@
         <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
       </span>
     </a>
+    <a href="https://www.instagram.com/association_prologin/" title="{% trans "Prologin on Instagram" %}" class="social">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
+        <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
   </div>
   <div class="col-md-4">
     <h3>{% trans "Change locale" %} <i class=" fa fa-globe"></i></h3>
