--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load utils %}
+{% load static %}
 
 <div class="row">
   <div class="col-md-4">
@@ -58,6 +59,12 @@
       <span class="fa-stack fa-lg">
         <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
         <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+    <a href="https://discord.gg/qsrzT6T946" title="{% trans "Prologin on Discord" %}" class="social">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
+        <img src="{% static 'img/discord.svg' %}" class="fa-stack-1x fa-inverse fa" style="width: 20px;top: 12px;left: 11px;">
       </span>
     </a>
   </div>
