--- a/prologin/pages/templates/pages/about-contest-rules.html
+++ b/prologin/pages/templates/pages/about-contest-rules.html
@@ -41,7 +41,7 @@
     <p>Chaque participant doit avoir 20 ans ou moins au 31 décembre de l’année
     précédant l’édition (édition {{ edition }} : né après le 1er janvier {{ born_year }}), être
     francophone, résider dans un pays de l'Union Européenne ou en Suisse et ne
-    pas être ou avoir été élève des écoles EPITA/EPITECH à Paris.</p>
+    pas être ou avoir été élève des écoles EPITA/EPITECH.</p>
 
     <h3>Article 4</h3>
     <p>Le concours se déroule en trois parties : le questionnaire de sélection,
