--- a/prologin/pages/templates/pages/about-contest-rules.html
+++ b/prologin/pages/templates/pages/about-contest-rules.html
@@ -40,8 +40,11 @@
     <h3>Article 3</h3>
     <p>Chaque participant doit avoir 20 ans ou moins au 31 décembre de l’année
     précédant l’édition (édition {{ edition }} : né après le 1er janvier {{ born_year }}), être
-    francophone, résider dans un pays de l'Union Européenne ou en Suisse et ne
-    pas être ou avoir été élève des écoles EPITA/EPITECH à Paris.</p>
+    francophone et ne pas être ou avoir été élève des écoles EPITA/EPITECH à Paris.</p>
+
+    <p>L'association ne délivre pas de VISA, ni ne peut aider pour l'obtention d'un VISA
+    pour participer aux actions du concours. Les candidats concernés peuvent envoyer un
+    courrier électronique à <a href="mailto:association@prologin.org">association@prologin.org</a>.</p>
 
     <h3>Article 4</h3>
     <p>Le concours se déroule en trois parties : le questionnaire de sélection,
