front: update discord invite url in footer
Squashed commit of the following:

* front: update discord invite url in footer

--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -31,7 +31,7 @@
         {% endcomment %}
     <h3>{% trans "Stay tuned!" %}</h3>
     {# social links #}
-    <a href="https://discord.gg/qsrzT6T946" title="{% trans "Prologin on Discord" %}" class="social">
+    <a href="https://discord.com/invite/fUKbkwU" title="{% trans "Prologin on Discord" %}" class="social">
       <span class="fa-stack fa-lg">
         <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
         <img src="{% static 'img/discord.svg' %}" class="fa-stack-1x fa-inverse fa" style="width: 20px;top: 12px;left: 11px;">
