fix(various): replicate prod state

--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -13,6 +13,7 @@
       <li><a href="{% url 'pages:about-privacy-policy' %}"><i class="fa fa-lock fa-centered"></i> {% trans "Privacy policy" %}</a></li>
       <li><a href="{% url 'sponsors:index' %}"><i class="fa fa-heart fa-centered"></i> {% trans "Sponsors" %}</a></li>
       <li><a href="{% get_setting 'PROLOGIN_BUG_TRACKER_URL' %}"><i class="fa fa-bug"></i> {% trans "Report a bug on the website" %}</a></li>
+      <li><a href="https://gitlab.com/prologin"><i class="fa fa-gitlab fa-centered"></i> Retrouvez nos projets libres sur notre GitLab</a></li>
 
     </ul>
         {% comment TODO %}
