feat: change association email
Squashed commit of the following:

* feat: change association email

Signed-off-by: Paul Dufour <paul.dufour@epita.fr>

--- a/prologin/pages/templates/pages/about-contribute.html
+++ b/prologin/pages/templates/pages/about-contribute.html
@@ -22,7 +22,7 @@ exercises, but without joining the organization (which calls for further time in
 <a href="https://github.com/prologin/ressources-contributeurs">public resources</a> to understand how we create exercises
 for our platform.{% endblocktrans %}</p>
       <p class="text-justify">{% blocktrans %}If you are interested in helping us creating cool exercises, do not hesitate to
-send an email at: <a href="mailto:info@prologin.org">info@prologin.org</a>.{% endblocktrans %}</p>
+send an email at: <a href="mailto:concours@prologin.org">concours@prologin.org</a>.{% endblocktrans %}</p>
     </div>
 
     <div class="col-md-4 col-sm-6">
@@ -37,7 +37,7 @@ such as:
 </ul>
 Prologin also has some non-technical necessities including logistics, sponsoring, and communication.{% endblocktrans %}</p>
       <p class="text-justify">{% blocktrans %}We have a lot to do, hence we need motivated people every year! If you want to
-join in, or if you have any question, feel free to write to us: <a href="mailto:info@prologin.org">info@prologin.org</a>.{% endblocktrans %}</p>
+join in, or if you have any question, feel free to write to us: <a href="mailto:concours@prologin.org">concours@prologin.org</a>.{% endblocktrans %}</p>
     </div>
 
     <div class="col-md-4 col-sm-6">
