--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -35,7 +35,7 @@
             <dt>{% trans "Phone" %}</dt>
             <dd><a href="tel:+33144080190">+331 44 08 01 90</a></dd>
             <dt>{% trans "Mail" %}</dt>
-            <dd><code>info@prologin.org</code></dd>
+            <dd><code>concours@prologin.org</code></dd>
           </dl>
         </div>
       </div>
