--- a/prologin/pages/templates/pages/about-privacy-policy.html
+++ b/prologin/pages/templates/pages/about-privacy-policy.html
@@ -144,7 +144,7 @@ You have (_via_ the holder of parental authorities when applicable) the right to
 
 #### How to Exercise your Rights
 
-Any request must be sent by email to [info@prologin.org](mailto:info@prologin.org).
+Any request must be sent by email to [concours@prologin.org](mailto:concours@prologin.org).
 
 #### Lodging a Complaint
 
