Remove EPITA rule
Squashed commit of the following:

* remove epita rule

--- a/prologin/pages/templates/pages/about-contest-rules.html
+++ b/prologin/pages/templates/pages/about-contest-rules.html
@@ -39,8 +39,8 @@
 
     <h3>Article 3</h3>
     <p>Chaque participant doit avoir 20 ans ou moins au 31 décembre de l’année
-    précédant l’édition (édition {{ edition }} : né après le 1er janvier {{ born_year }}), être
-    francophone et ne pas être ou avoir été élève des écoles EPITA/EPITECH à Paris.</p>
+    précédant l’édition (édition {{ edition }} : né après le 1er janvier {{ born_year }}) et être
+    francophone.</p>
 
     <p>L'association ne délivre pas de VISA, ni ne peut aider pour l'obtention d'un VISA
     pour participer aux actions du concours. Les candidats concernés peuvent envoyer un
